# crime_BA

./: .gitignore  DATASET_DESCRIPTION.md  Data_Dictionary_VN.md  Readme.md  categories.txt  pyproject.toml  requirements.txt  summary_data.json
Case_Outcome_Monitoring/: clean_data.py  ingest_data.py
app/: Advanced_Analytics.py  Case_Outcome_Monitoring.py  Crime_Pattern_Analysis.py  Criminal_Profiling.py  Predictive_modeling.py  Resource_Allocation.py  Resource_Allocation_V2.py  app.py
crime-ba/: 00 - Home.md  01 - Ke hoach thuc hien.md  02 - Metadata Dataset.md  10 - Descriptive Analytics.md  20 - Diagnostic Analytics.md  30 - Predictive Analytics.md  40 - Prescriptive Analytics.md  90 - Progress Log.md
crime-ba/.obsidian/: workspace.json
docs/: 00 - Home.md  01 - Ke hoach thuc hien.md  02 - Metadata Dataset.md  10 - Descriptive Analytics.md  20 - Diagnostic Analytics.md  30 - Predictive Analytics.md  90 - Progress Log.md  95 - Code Cleanup Report.md  99 - Project Roadmap.md
docs/.obsidian/: workspace.json
ingestion/: ingest_case_outcome.py  ingest_crime_pattern.py  ingest_criminal_profiling.py  ingest_recidivism.py  ingest_resource_allocation.py
pipelines/: data_processing_pipeline.py  training_pipeline.py
preprocessing/: clean_case_outcome.py  clean_crime_pattern.py  clean_criminal_profiling.py  clean_recidivism.py  clean_resource_allocation.py
