[project]
name = "crime-ba"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "branca>=0.8.2",
    "category-encoders>=2.9.0",
    "folium>=0.20.0",
    "imblearn>=0.0",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pulp>=3.3.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "streamlit>=1.56.0",
    "streamlit-folium>=0.27.1",
    "streamlit-option-menu>=0.4.0",
]
